# expected

./: CMakeLists.txt  NEWS.rst  README.md  README.rst  resolve.json  wscript
example/: main.cpp
